[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/GuardBehavior.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://scripts/GuardPath.gd" type="Script" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( -23.2238, 83.9052, 23.2238, -83.9052, 202.5, 212, 0, 0, 0, 0, 382.18, 137.793, -52.4408, -55.4374, 52.4408, 55.4374, 629.4, 205.966, 42.7018, -47.9458, -42.7018, 47.9458, 630.15, 328.078, 131.102, 29.217, -131.102, -29.217, 373.19, 338.566, -5.24408, 62.9289, 5.24408, -62.9289, 202.5, 212 )
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 22.3575, 33.0034 )

[sub_resource type="Animation" id=3]
resource_name = "exited"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -10 ), Vector2( 0, 0 ), Vector2( 0, -10 ), Vector2( 0, 0 ) ]
}

[node name="GuardPath" type="Path2D"]
curve = SubResource( 1 )
script = ExtResource( 4 )

[node name="FollowAndRotate" type="PathFollow2D" parent="."]
position = Vector2( 202.5, 212 )
rotation = -1.27223

[node name="VisionCone" type="Area2D" parent="FollowAndRotate"]
script = ExtResource( 1 )

[node name="Shape" type="Polygon2D" parent="FollowAndRotate/VisionCone"]
modulate = Color( 1, 1, 1, 0.486275 )
rotation = -0.00257678
color = Color( 1, 0.984314, 0.564706, 1 )
polygon = PoolVector2Array( 0.280563, -1.04376, 172.973, -68.8494, 172.973, 65.7024 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="FollowAndRotate/VisionCone"]
polygon = PoolVector2Array( 0.0337982, 0.364792, 172.114, -68.5097, 172.459, 65.52 )

[node name="Follow" type="PathFollow2D" parent="."]
position = Vector2( 202.5, 212 )
rotate = false

[node name="Guard" type="Area2D" parent="Follow"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Follow/Guard"]
modulate = Color( 0.333333, 1, 0.172549, 1 )
scale = Vector2( 0.7893, 1.16388 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Follow/Guard"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Follow/Guard"]
anims/exited = SubResource( 3 )
[connection signal="area_entered" from="FollowAndRotate/VisionCone" to="." method="_on_area_entered"]
[connection signal="area_entered" from="Follow/Guard" to="." method="_on_area_entered"]
